--- a/ConexionMySQL/pom.xml
+++ b/ConexionMySQL/pom.xml
@@ -14,6 +14,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.29</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-util</artifactId>
+            <version>9.4.46.v20220331</version>
+        </dependency>
     </dependencies>
 
 
